  Preferences/General)
- Improve formatting of HCCME options pane
- Fix breakage in "rename" command (renaming series)
- Fix bug 2089048
- Enable Chow test for non-time series datasets
- Revise formatting style for model output
- Change the label "standard error of residuals" to
  "standard error of the regression"
- Allow users to change the text size in help windows

8/28/2008 version 1.7.7
- Revamp of internal handling of scalar variables
- The --preserve option to the "nulldata" and "open" commands
  now preserves existing scalars as well as matrices
- Windows package: update to GTK+ 2.12.11 and friends
- Inside functions: restrict the smpl command within the
  bounds set on entry to the function
- setobs command: if used inside a function, revert the
  effects on exit
- ordered probit/logit: fix for the case where the dependent
  variable does not form a continuous integer sequence; 
  fix reporting of information criteria; switch to the mode
  of presentation of cut-points used by Stata and R
- string-editing dialogs: ensure we have a cancel button
- Saving data when the dataset is currently sub-sampled: 
  fix breakage whereby the option to restore the full dataset
  was not shown
- Naming variables: put in place more stringent checking to
  avoid name collisions across series, scalars, matrices, etc.
- VARs in saved sessions: ensure that we save the information
  needed for subsequent bootstrap analyses
- Fix the mechanism for searching for a user's customized
  LaTeX preamble file (got broken at some point)
- LaTeX compilation: be more lenient -- getting some output
  on standard error does not necessarily mean that 
  compilation has failed
- Determining the main gretl directory: try to handle the
  case where the user has a stale ~/.gretl2rc file
- Minor OS X fixes
- Respect keyboard "Esc" as dialog "Cancel" more consistently 
- Variable selection dialogs: allow use of right and left
  arrow keys to activate the "Add" and "Remove" buttons